Minor housekeeping and data extraction method creation
- Made some minor cosmetic changes
- Created a prof of concept for iterating and extracting pandas data

--- a/DigiMuse-Notebook-Rough.ipynb
+++ b/DigiMuse-Notebook-Rough.ipynb
@@ -47,7 +47,7 @@
     "bombs=['TOTAL_TONS', 'TONS_IC', 'TONS_FRAG']\n",
     "\n",
     "grouped = df.groupby('MSNDATE')[bombs].sum()\n",
-    "grouped = grouped/1000\n",
+    "grouped = grouped/1000 #Convert to kilatons\n",
     "\n",
     "source = ColumnDataSource(grouped)\n",
     "\n",
@@ -89,7 +89,7 @@
     "bombs=['TOTAL_TONS', 'TONS_IC', 'TONS_FRAG']\n",
     "\n",
     "grouped = df.groupby(pd.Grouper(key='MSNDATE', freq='W'))[bombs].sum()\n",
-    "grouped = grouped/1000\n",
+    "grouped = grouped/1000 #Convert to kilatons\n",
     "\n",
     "source = ColumnDataSource(grouped)\n",
     "\n",
@@ -131,7 +131,7 @@
     "bombs=['TOTAL_TONS', 'TONS_IC', 'TONS_FRAG']\n",
     "\n",
     "grouped = df.groupby(pd.Grouper(key='MSNDATE', freq='2W'))[bombs].sum()\n",
-    "grouped = grouped/1000\n",
+    "grouped = grouped/1000 #Convert to kilatons\n",
     "\n",
     "source = ColumnDataSource(grouped)\n",
     "\n",
@@ -325,6 +325,203 @@
    "metadata": {},
    "source": [
     "---------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1939-09-03 00:00:00  -  0.0\n",
+      "1939-09-17 00:00:00  -  0.0\n",
+      "1939-10-01 00:00:00  -  0.0\n",
+      "1939-10-15 00:00:00  -  0.0\n",
+      "1939-10-29 00:00:00  -  0.0\n",
+      "1939-11-12 00:00:00  -  0.0\n",
+      "1939-11-26 00:00:00  -  0.0\n",
+      "1939-12-10 00:00:00  -  0.0\n",
+      "1939-12-24 00:00:00  -  0.0\n",
+      "1940-01-07 00:00:00  -  0.0\n",
+      "1940-01-21 00:00:00  -  0.0\n",
+      "1940-02-04 00:00:00  -  0.0\n",
+      "1940-02-18 00:00:00  -  0.0\n",
+      "1940-03-03 00:00:00  -  0.0\n",
+      "1940-03-17 00:00:00  -  0.0\n",
+      "1940-03-31 00:00:00  -  0.0\n",
+      "1940-04-14 00:00:00  -  0.0\n",
+      "1940-04-28 00:00:00  -  0.0\n",
+      "1940-05-12 00:00:00  -  0.0\n",
+      "1940-05-26 00:00:00  -  0.028\n",
+      "1940-06-09 00:00:00  -  0.009\n",
+      "1940-06-23 00:00:00  -  0.012\n",
+      "1940-07-07 00:00:00  -  0.012\n",
+      "1940-07-21 00:00:00  -  0.04058\n",
+      "1940-08-04 00:00:00  -  0.755\n",
+      "1940-08-18 00:00:00  -  5.744\n",
+      "1940-09-01 00:00:00  -  0.69175\n",
+      "1940-09-15 00:00:00  -  1.06318\n",
+      "1940-09-29 00:00:00  -  1.578\n",
+      "1940-10-13 00:00:00  -  1.002\n",
+      "1940-10-27 00:00:00  -  1.021\n",
+      "1940-11-10 00:00:00  -  0.85713\n",
+      "1940-11-24 00:00:00  -  0.838\n",
+      "1940-12-08 00:00:00  -  0.513\n",
+      "1940-12-22 00:00:00  -  0.772\n",
+      "1941-01-05 00:00:00  -  0.457\n",
+      "1941-01-19 00:00:00  -  0.648\n",
+      "1941-02-02 00:00:00  -  0.692\n",
+      "1941-02-16 00:00:00  -  1.188\n",
+      "1941-03-02 00:00:00  -  0.91675\n",
+      "1941-03-16 00:00:00  -  1.183\n",
+      "1941-03-30 00:00:00  -  0.752\n",
+      "1941-04-13 00:00:00  -  1.291\n",
+      "1941-04-27 00:00:00  -  1.128\n",
+      "1941-05-11 00:00:00  -  3.15936\n",
+      "1941-05-25 00:00:00  -  1.03764\n",
+      "1941-06-08 00:00:00  -  0.71162\n",
+      "1941-06-22 00:00:00  -  3.2256799999999997\n",
+      "1941-07-06 00:00:00  -  2.9902900000000003\n",
+      "1941-07-20 00:00:00  -  2.31067\n",
+      "1941-08-03 00:00:00  -  1.511\n",
+      "1941-08-17 00:00:00  -  2.74338\n",
+      "1941-08-31 00:00:00  -  1.953\n",
+      "1941-09-14 00:00:00  -  2.029\n",
+      "1941-09-28 00:00:00  -  1.145\n",
+      "1941-10-12 00:00:00  -  1.647\n",
+      "1941-10-26 00:00:00  -  2.02\n",
+      "1941-11-09 00:00:00  -  1.495\n",
+      "1941-11-23 00:00:00  -  0.239\n",
+      "1941-12-07 00:00:00  -  0.975\n",
+      "1941-12-21 00:00:00  -  0.8747999999999999\n",
+      "1942-01-04 00:00:00  -  1.0166\n",
+      "1942-01-18 00:00:00  -  1.5378999999999998\n",
+      "1942-02-01 00:00:00  -  1.03815\n",
+      "1942-02-15 00:00:00  -  0.7002\n",
+      "1942-03-01 00:00:00  -  0.5345700000000002\n",
+      "1942-03-15 00:00:00  -  2.24\n",
+      "1942-03-29 00:00:00  -  2.053\n",
+      "1942-04-12 00:00:00  -  2.36766\n",
+      "1942-04-26 00:00:00  -  2.12976\n",
+      "1942-05-10 00:00:00  -  2.08105\n",
+      "1942-05-24 00:00:00  -  0.6184\n",
+      "1942-06-07 00:00:00  -  6.6546899999999996\n",
+      "1942-06-21 00:00:00  -  1.8865399999999999\n",
+      "1942-07-05 00:00:00  -  4.06991\n",
+      "1942-07-19 00:00:00  -  2.79957\n",
+      "1942-08-02 00:00:00  -  5.79367\n",
+      "1942-08-16 00:00:00  -  2.5665999999999998\n",
+      "1942-08-30 00:00:00  -  3.12996\n",
+      "1942-09-13 00:00:00  -  6.34795\n",
+      "1942-09-27 00:00:00  -  2.606569999999999\n",
+      "1942-10-11 00:00:00  -  3.034210000000001\n",
+      "1942-10-25 00:00:00  -  2.98274\n",
+      "1942-11-08 00:00:00  -  2.23992\n",
+      "1942-11-22 00:00:00  -  2.9397599999999997\n",
+      "1942-12-06 00:00:00  -  2.807969999999999\n",
+      "1942-12-20 00:00:00  -  2.6058199999999996\n",
+      "1943-01-03 00:00:00  -  2.62479\n",
+      "1943-01-17 00:00:00  -  4.676729999999999\n",
+      "1943-01-31 00:00:00  -  4.53128\n",
+      "1943-02-14 00:00:00  -  6.44341\n",
+      "1943-02-28 00:00:00  -  10.807959999999998\n",
+      "1943-03-14 00:00:00  -  9.72502\n",
+      "1943-03-28 00:00:00  -  8.375149999999998\n",
+      "1943-04-11 00:00:00  -  12.166919999999998\n",
+      "1943-04-25 00:00:00  -  10.218689999999999\n",
+      "1943-05-09 00:00:00  -  13.028219999999997\n",
+      "1943-05-23 00:00:00  -  17.53965\n",
+      "1943-06-06 00:00:00  -  14.38169\n",
+      "1943-06-20 00:00:00  -  20.972270000000005\n",
+      "1943-07-04 00:00:00  -  21.637670000000004\n",
+      "1943-07-18 00:00:00  -  21.03\n",
+      "1943-08-01 00:00:00  -  27.9467\n",
+      "1943-08-15 00:00:00  -  22.2863\n",
+      "1943-08-29 00:00:00  -  28.316800000000004\n",
+      "1943-09-12 00:00:00  -  36.68325\n",
+      "1943-09-26 00:00:00  -  27.365\n",
+      "1943-10-10 00:00:00  -  36.388\n",
+      "1943-10-24 00:00:00  -  15.583\n",
+      "1943-11-07 00:00:00  -  15.82275\n",
+      "1943-11-21 00:00:00  -  16.76625\n",
+      "1943-12-05 00:00:00  -  33.683020000000006\n",
+      "1943-12-19 00:00:00  -  26.5065\n",
+      "1944-01-02 00:00:00  -  38.21278\n",
+      "1944-01-16 00:00:00  -  38.573080000000004\n",
+      "1944-01-30 00:00:00  -  49.91969\n",
+      "1944-02-13 00:00:00  -  39.66434\n",
+      "1944-02-27 00:00:00  -  55.92645000000001\n",
+      "1944-03-12 00:00:00  -  43.64505\n",
+      "1944-03-26 00:00:00  -  78.44307\n",
+      "1944-04-09 00:00:00  -  43.953030000000005\n",
+      "1944-04-23 00:00:00  -  97.77394000000001\n",
+      "1944-05-07 00:00:00  -  98.16152000000004\n",
+      "1944-05-21 00:00:00  -  93.73555999999999\n",
+      "1944-06-04 00:00:00  -  151.0045\n",
+      "1944-06-18 00:00:00  -  162.64565\n",
+      "1944-07-02 00:00:00  -  115.61805\n",
+      "1944-07-16 00:00:00  -  113.9312\n",
+      "1944-07-30 00:00:00  -  134.68685\n",
+      "1944-08-13 00:00:00  -  158.11801\n",
+      "1944-08-27 00:00:00  -  126.00463\n",
+      "1944-09-10 00:00:00  -  94.33105\n",
+      "1944-09-24 00:00:00  -  104.16208999999999\n",
+      "1944-10-08 00:00:00  -  111.95451000000001\n",
+      "1944-10-22 00:00:00  -  92.58812\n",
+      "1944-11-05 00:00:00  -  103.772\n",
+      "1944-11-19 00:00:00  -  88.3854\n",
+      "1944-12-03 00:00:00  -  70.43864000000002\n",
+      "1944-12-17 00:00:00  -  79.2395\n",
+      "1944-12-31 00:00:00  -  96.46593999999999\n",
+      "1945-01-14 00:00:00  -  77.22636999999999\n",
+      "1945-01-28 00:00:00  -  53.28935\n",
+      "1945-02-11 00:00:00  -  77.39764\n",
+      "1945-02-25 00:00:00  -  123.95715000000001\n",
+      "1945-03-11 00:00:00  -  142.1195\n",
+      "1945-03-25 00:00:00  -  210.07238\n",
+      "1945-04-08 00:00:00  -  121.51682999999998\n",
+      "1945-04-22 00:00:00  -  161.65755\n",
+      "1945-05-06 00:00:00  -  39.2825\n",
+      "1945-05-20 00:00:00  -  18.666100000000004\n",
+      "1945-06-03 00:00:00  -  22.310909999999996\n",
+      "1945-06-17 00:00:00  -  21.90607\n",
+      "1945-07-01 00:00:00  -  22.346320000000002\n",
+      "1945-07-15 00:00:00  -  21.823269999999997\n",
+      "1945-07-29 00:00:00  -  23.531529999999997\n",
+      "1945-08-12 00:00:00  -  57.103500000000004\n",
+      "1945-08-26 00:00:00  -  4.874\n",
+      "1945-09-09 00:00:00  -  0.032\n",
+      "1945-09-23 00:00:00  -  0.004\n",
+      "1945-10-07 00:00:00  -  0.0\n",
+      "1945-10-21 00:00:00  -  0.0\n",
+      "1945-11-04 00:00:00  -  0.0\n",
+      "1945-11-18 00:00:00  -  0.0\n",
+      "1945-12-02 00:00:00  -  0.0\n",
+      "1945-12-16 00:00:00  -  0.226\n",
+      "1945-12-30 00:00:00  -  0.207\n",
+      "1946-01-13 00:00:00  -  0.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data/thor_wwii.csv')\n",
+    "\n",
+    "#make sure MSNDATE is a datetime format\n",
+    "df['MSNDATE'] = pd.to_datetime(df['MSNDATE'], format='%m/%d/%Y')\n",
+    "\n",
+    "bombs=['TOTAL_TONS']\n",
+    "\n",
+    "grouped = df.groupby(pd.Grouper(key='MSNDATE', freq='2W'))[bombs].sum()\n",
+    "grouped = grouped/1000 #Convert to kilatons\n",
+    "#grouped.to_string()\n",
+    "for i in grouped.itertuples():\n",
+    " #   print(getattr(i, 'MSNDATE') + \" - \" + getattr(i, 'TOTAL_TONS'))\n",
+    "    print(i[0], \" - \", i[1])"
    ]
   },
   {
