Finished writing the text portion of the notebook
- Added introduction, conclusion, sources, further reading, and even a banner.

--- a/HearTheBombsFall-DigiMuse-Notebook.ipynb
+++ b/HearTheBombsFall-DigiMuse-Notebook.ipynb
@@ -5,8 +5,18 @@
    "metadata": {},
    "source": [
     "# Data Visulization With Soundscapes\n",
+    "![notebook banner image](https://freesound.org/data/displays/156/156031_2703579_wave_L.png \"Notebook banner image\")\n",
     "## Introduction \n",
     "\n",
+    "Museums provide an experience that learning history by reading books doesn’t give you. In a museum, you get to use your senses to take in the history around you, making it feel more intimate, impactful, and ultimately in some cases, more memorable. Using our senses to experience things allows us to connect emotionally with our learning in a way that’s hard to replicate on a page.\n",
+    "\n",
+    "This project investigates ways historical information can be presented to leverage the senses to create immersive and impactful experiences. Inspired by the practice of [sonication]( https://programminghistorian.org/en/lessons/sonification), this project will take historical data and transform it into a soundscape, using different foreground and background sounds to create a sense of place. Hopefully, the emotional impact created by the soundscape and the novelty of the whole experience will cause users to reflect on how they view the past. \n",
+    "\n",
+    "Changing how we experience data also has other benefits besides engagement and immersion. Converting data to audio like this makes it accessible to people who may not get the same benefits out of visual data.\n",
+    "\n",
+    "Specifically, this project creates a soundscape that simulates an air raid using data from Allied bombing missions during World War II.\n",
+    "\n",
+    "---------\n",
     "## Data \n",
     "This project will be using the Theater History of Operations Reports (THOR) dataset of aeriel bombardment operations during World War I, World War II, the Korean War, and the Vietnam War undertaken by the US and other Allied nations. The dataset is available on data.world and can be accessed [here](https://data.world/datamil/world-war-ii-thor-data).\n",
     "\n",
@@ -149,13 +159,6 @@
     "                  source_file=('const', 'audio/background/siren/warningSiren01.wav'), #location of sound\n",
     "                  source_time=('const', 0)) #Sacper will play the sound starting at this time (so a value of 1 start 1 second into the sound)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -394,6 +397,52 @@
    "metadata": {},
    "source": [
     "---------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    "There are a bunch of different ways this project could be further developed and improved, for example: \n",
+    "-\tAdding different types of bombs would improve the project immensely. The sounds could be selected based on how many kilotons of explosives were dropped, with the loud ones perhaps shattering glass.\n",
+    "-\tExplosions could be separated by type, fragmentation bombs and incendiary bombs having different sounds.\n",
+    "-\tThe different random elements of the soundscape generation could be modified and tweaked to create a more natural or better-sounding experience.\n",
+    "-\tThis soundscape could be combined with sonication of the same data as the background.\n",
+    "-\tThe core idea for this project could also be applied to other data sets, either from other wars or other historical subjects entirely.\n",
+    "\n",
+    "As time goes on, people want more interactive and engaging experiences. This project shows that the GLAM sector can use digital methods to create a wide variety of new experiences to meet this demand and present history as a more active, engaging subject, instead of one stuck in the past.\n",
+    "\n",
+    "\n",
+    "## References\n",
+    "Graham, Shawn. “The Sound of Data (a Gentle Introduction to Sonification for Historians).” Programming Historian, June 7, 2016. https://programminghistorian.org/en/lessons/sonification.\n",
+    "\n",
+    "Harper, Charlie. “Visualizing Data with Bokeh and Pandas.” Programming Historian, July 27, 2018. https://programminghistorian.org/en/lessons/visualizing-with-bokeh.\n",
+    "\n",
+    "“Installing Python Packages from a Jupyter Notebook | Pythonic Perambulations.” Accessed April 24, 2021. https://jakevdp.github.io/blog/2017/12/05/installing-python-packages-from-jupyter/.\n",
+    "\n",
+    "Kelly, Lynda. “The (Post) Digital Visitor: What Has (Almost) Twenty Years of Museum Audience Research Revealed?” MW2016: Museums and the Web 2016 (blog), February 16, 2016. https://mw2016.museumsandtheweb.com/paper/the-post-digital-visitor-what-has-almost-20-years-of-museum-audience-research-revealed/.\n",
+    "\n",
+    "Marl/Jams. Python. 2014. Reprint, Music and Audio Research Laboratory - NYU, 2021. https://github.com/marl/jams.\n",
+    "“Play Sound in Python - Python Tutorial.” Accessed April 24, 2021. https://pythonbasics.org/python-play-sound/.\n",
+    "\n",
+    "Stack Overflow. “Python - How to Iterate over Rows in a DataFrame in Pandas.” Accessed April 24, 2021. https://stackoverflow.com/questions/16476924/how-to-iterate-over-rows-in-a-dataframe-in-pandas.\n",
+    "\n",
+    "Salamon, Justin, Duncan MacConnell, Mark Cartwright, Peter Li, and Juan Pablo Bello. “Scaper: A Library for Soundscape Synthesis and Augmentation.” In 2017 IEEE Workshop on Applications of Signal Processing to Audio and Acoustics (WASPAA), 344–48. New Paltz, NY: IEEE, 2017. https://doi.org/10.1109/WASPAA.2017.8170052.\n",
+    "\n",
+    "“Scaper — Scaper 1.6.5 Documentation.” Accessed April 24, 2021. https://scaper.readthedocs.io/en/latest/index.html.\n",
+    "\n",
+    "“Sox Installation under Windows and Sox Installation in Python - Programmer Sought.” Accessed April 24, 2021. https://www.programmersought.com/article/3710777418/.\n",
+    "\n",
+    "data.world. “World War II THOR Data - Dataset by Datamil.” Accessed April 24, 2021. https://data.world/datamil/world-war-ii-thor-data.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Further Reading\n",
+    "-   For more on sonification check out [this paper](https://programminghistorian.org/en/lessons/sonification) by Shawn Graham on The Programming Historian. \n",
+    "-   [This paper](https://mw2016.museumsandtheweb.com/paper/the-post-digital-visitor-what-has-almost-20-years-of-museum-audience-research-revealed/) provideds some good insights into the increasing demand for engaging digital experiences amongst museum guests.\n",
+    "-   Last but not least, check out [this paper](http://www.justinsalamon.com/uploads/4/3/9/4/4394963/salamon_scaper_waspaa_2017.pdf) by [Justin Salamon](https://www.justinsalamon.com/) for more infromation on Scaper.\n"
    ]
   },
   {
